<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fixtures.MatchDetailFragment">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutDescription="@xml/fragment_match_detail_scene">


        <ImageView
            android:id="@+id/img_match_country_flag"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@id/txt_match_country_name"
            android:contentDescription="@string/match_country_flag"
            android:src="@drawable/icons_default_flag_60"
            app:layout_constraintBottom_toBottomOf="@+id/txt_match_country_name"
            app:layout_constraintEnd_toStartOf="@+id/txt_match_country_name"
            app:layout_constraintTop_toTopOf="@+id/txt_match_country_name" />

        <TextView
            android:id="@+id/txt_match_country_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/italy"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/txt_match_date_and_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/_2022_05_20_18_45_00z"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/txt_match_competition_name"
            app:layout_constraintStart_toEndOf="@+id/img_match_competition"
            app:layout_constraintTop_toBottomOf="@+id/txt_match_competition_name" />

        <ImageView
            android:id="@+id/img_match_competition"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerInParent="true"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@id/txt_match_competition_name"
            android:contentDescription="@string/competition_emblem"
            android:src="@drawable/icons_default_flag_60"
            app:layout_constraintBottom_toBottomOf="@+id/txt_match_competition_name"
            app:layout_constraintEnd_toStartOf="@+id/txt_match_competition_name"
            app:layout_constraintTop_toTopOf="@+id/txt_match_competition_name"
            app:layout_constraintVertical_bias="0.125" />

        <TextView
            android:id="@+id/txt_match_competition_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/ligue_1"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/txt_match_country_name"
            app:layout_constraintHorizontal_bias="0.375"
            app:layout_constraintStart_toEndOf="@+id/img_match_country_flag"
            app:layout_constraintTop_toBottomOf="@+id/txt_match_country_name" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_match_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:elevation="8dp"
            app:cardCornerRadius="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_match_date_and_time">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/img_live_indicator"
                    android:layout_width="5dp"
                    android:layout_height="0dp"
                    android:background="@color/green"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/img_match_detail_home_team"
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/home_team_flag"
                    android:src="@drawable/icons_default_flag_60"
                    app:layout_constraintEnd_toEndOf="@+id/txt_match_detail_home_team"
                    app:layout_constraintStart_toStartOf="@+id/txt_match_detail_home_team"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/img_match_detail_away_team"
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:contentDescription="@string/away_team_flag"
                    android:src="@drawable/icons_default_flag_60"
                    app:layout_constraintEnd_toEndOf="@id/txt_match_detail_away_team"
                    app:layout_constraintStart_toStartOf="@id/txt_match_detail_away_team"
                    app:layout_constraintTop_toTopOf="@id/img_match_detail_home_team" />

                <TextView
                    android:id="@+id/txt_match_detail_home_team"
                    android:layout_width="0dp"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/atlanta"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline6"
                    app:layout_constraintHorizontal_bias="0.272"
                    app:layout_constraintStart_toStartOf="@+id/score_board_guideline_vertical"
                    app:layout_constraintTop_toBottomOf="@+id/img_match_detail_home_team"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/txt_match_detail_away_team"
                    android:layout_width="0dp"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:text="@string/deportivo_malpu"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_match_detail_home_team"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.666"
                    app:layout_constraintStart_toStartOf="@id/guideline6"
                    app:layout_constraintTop_toTopOf="@+id/txt_match_detail_home_team"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/txt_match_detail_away_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:text="@string/zero"
                    android:textSize="42sp"
                    app:layout_constraintBottom_toBottomOf="@id/txt_match_detail_home_score"
                    app:layout_constraintStart_toEndOf="@id/guideline6"
                    app:layout_constraintTop_toTopOf="@id/txt_match_detail_home_score"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/txt_match_detail_home_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:text="@string/zero"
                    android:textSize="42sp"
                    app:layout_constraintBottom_toBottomOf="@+id/img_match_detail_home_team"
                    app:layout_constraintEnd_toStartOf="@+id/guideline6"
                    app:layout_constraintTop_toTopOf="@+id/img_match_detail_home_team" />

                <TextView
                    android:id="@+id/txt_match_detail_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/ft"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@id/txt_match_detail_home_team"
                    app:layout_constraintStart_toEndOf="@id/img_live_indicator"
                    app:layout_constraintTop_toTopOf="@id/img_match_detail_home_team" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/score_board_guideline_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.1" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txt_match_detail_referee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/referee_massimiliano_irrati"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_match_detail" />


    </androidx.constraintlayout.motion.widget.MotionLayout>
</ScrollView>
