<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/single_fixture_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="4dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/layoutView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/txt_competition_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/as_roma"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_competition_logo"
            app:layout_constraintStart_toEndOf="@+id/img_competition_logo"
            app:layout_constraintTop_toTopOf="@+id/img_competition_logo" />

        <ImageView
            android:id="@+id/img_competition_logo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/competition_emblem"
            android:src="@drawable/competition_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/img_navigate_to_competition_details"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_load_match_details"
            android:contentDescription="@string/navigate_next" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>